nav hamburger adjusted

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
 <!--  header -->
 
+<body>
 <!--  navbar -->
    <nav
       class="navbar navbar-expand-lg navbar-light fixed-top py-3  justify-content-end"
