--- a/index.html
+++ b/index.html
@@ -310,11 +310,11 @@ Great working in a team environment having previously managed projects requiring
         </div>
         <div class="row">
           <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0" data-aos="fade-up-right">
-            <i class="fas fa-phone fa-3x mb-3 text-primary"></i>
+            <i class="fas fa-phone fa-3x mb-3" style="color:#73a580"></i>
             <div>0 </div>
           </div>
           <div class="col-lg-4 mr-auto text-center" data-aos="fade-up-left">
-            <i class="fas fa-envelope fa-3x mb-3 text-primary"></i>
+            <i class="fas fa-envelope fa-3x mb-3 " style="color:#73a580"></i>
             <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
             <a href="mailto:samihalim@gmail.com" class="d-block email">
               samihalim@gmail.com</a>
@@ -323,16 +323,17 @@ Great working in a team environment having previously managed projects requiring
       </div>
     </div>
 
+
 <!--  footer -->
- <footer class=" py-5">
+ <footer class=" py-5" style="background-color:#73a580">
       <div class="container">
         <div class="name small text-center">
           Copyright © 2020
         </div>
       </div>
       <div class="d-flex justify-content-center" data-aos="zoom-in">
-        <a href="https://www.linkedin.com/in/samihalim/"><i class="fab fa-linkedin icon fa-4x mr-3 footer-icon"></i></a>
-        <a href="https://github.com/samihalim"><i class="fab fa-github-square icon fa-4x ml-3 footer-icon"></i></a>
+        <a href="https://www.linkedin.com/in/samihalim/"><i class="fab fa-linkedin icon fa-4x mr-3 footer-icon" style="color:#18251b"></i></a>
+        <a href="https://github.com/samihalim"><i class="fab fa-github-square icon fa-4x ml-3 footer-icon" style="color:#18251b"></i></a>
       </div>
     </footer>
 <!--  footer -->
@@ -344,6 +345,7 @@ Great working in a team environment having previously managed projects requiring
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script src="js/chart.js"></script>
 <script src="js/scripts.js"></script>
 </body>
 </html>
