added new photo changed banner and more styling

--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
 
 <!--   -->
 
-    <header class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(./assets/image/travel.jpg);">
+    <header class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,1.4)), url(./assets/image/travel.jpg);">
   <div class="container text-center" data-aos="fade-up">
     <div class="avatar" data-aos="fade-up"></div>
          <h1 class="text-white font-weight-bold">
               Hi there! <br />
-              I am Sami Halim. A full-stack web developer.
+              I am <span style="font-size: 4rem;">Sami Halim</span>.<br /> A full-stack web developer.
             </h1>
-    <a class="btn btn-primary" href="https://www.linkedin.com/in/samihalim/"> Linkedin</a>
+    <a class="btn btn" style="background-color: #73a580" href="https://www.linkedin.com/in/samihalim/"> Linkedin</a>
   </div>
 </header>
 
@@ -331,7 +331,7 @@ Great working in a team environment having previously managed projects requiring
           Copyright © 2020
         </div>
       </div>
-      <div class="d-flex justify-content-center" data-aos="zoom-in">
+      <div class="d-flex justify-content-center">
         <a href="https://www.linkedin.com/in/samihalim/"><i class="fab fa-linkedin icon fa-4x mr-3 footer-icon" style="color:#18251b"></i></a>
         <a href="https://github.com/samihalim"><i class="fab fa-github-square icon fa-4x ml-3 footer-icon" style="color:#18251b"></i></a>
       </div>
