fixed card background

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <a class="nav-link js-scroll-trigger" id="change" href="#languages">Languages</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" id="change" href="#projects">Projects</a>
+              <a class="nav-link js-scroll-trigger" id="change" href="#projects">My Work</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" id="change" href="#contact">Contact</a>
@@ -215,7 +215,7 @@ Great working in a team environment having previously managed projects requiring
   <!--  projects -->
 <section class="page-section" id="projects">
     <div class="container text-center">
-          <h2>Projects</h2>
+          <h2>My Work</h2>
           <hr class="divider" data-aos="zoom-in-right" />
     </div>
 
@@ -227,7 +227,7 @@ Great working in a team environment having previously managed projects requiring
       <a href="https://www.bkfst.io/">
         <div class="card_inner">
           <div class="card_top">
-            <img  class="card-img" src="./assets/image/boc.png" alt="car" />
+            <img  class="card-img" src="./assets/image/boc.png" alt="Breakfast of champions logo" />
           </div>
           <div class="card_bottom">
             <div class="card_category">
@@ -245,18 +245,20 @@ Great working in a team environment having previously managed projects requiring
       </a>
     </div>
 
+
+
     <div class="card_item" data-aos="fade-up">
       <a href="https://airbrb-samihalim.herokuapp.com/">
         <div class="card_inner">
           <div class="card_top">
-            <img  class="card-img" src="./assets/image/airbrb.png" alt="car" />
+            <img  class="card-img" src="./assets/image/airbrb.png" alt="Airbrb logo" />
           </div>
           <div class="card_bottom">
             <div class="card_category">
               Airbrb
             </div>
             <div class="card_info">
-              <p class="title">An Airbnb clone for desk rentals all around the world!</p>
+              <p class="title">An Airbnb clone application for desk rentals all around the world!</p>
               <p>
                 A ruby on rails app.
               </p>
@@ -267,6 +269,116 @@ Great working in a team environment having previously managed projects requiring
       </a>
     </div>
     <div class="card_item" data-aos="fade-up-left">
+      <a href="bkfst.io">
+        <div class="card_inner">
+          <div class="card_top">
+            <img  class="card-img" src="./assets/image/boc.png" alt="car" />
+          </div>
+          <div class="card_bottom">
+            <div class="card_category">
+              BOC
+            </div>
+            <div class="card_info">
+              <p class="title">The first peer-to-peer feedback platform for creatives.</p>
+              <p>
+                A ruby on rails app.
+              </p>
+            </div>
+
+          </div>
+        </div>
+      </a>
+    </div>
+     <div class="container text-center experience">
+          <h2>Previous Experience</h2>
+          <hr class="divider" data-aos="zoom-in-right" />
+    </div>
+
+     <div class="card_item" data-aos="fade-up-left">
+      <a href="bkfst.io">
+        <div class="card_inner">
+          <div class="card_top">
+            <img  class="card-img" src="./assets/image/airbnb.png" alt="airbnb logo" />
+          </div>
+          <div class="card_bottom">
+            <div class="card_category">
+              Project Coordinator
+            </div>
+            <div class="card_info">
+              <p class="title">The first peer-to-peer feedback platform for creatives.</p>
+              <p>
+                A ruby on rails app.
+              </p>
+            </div>
+
+          </div>
+        </div>
+      </a>
+    </div>
+     <div class="card_item" data-aos="fade-up-left">
+      <a href="bkfst.io">
+        <div class="card_inner">
+          <div class="card_top">
+            <img  class="card-img" src="./assets/image/toniic.png" alt="toniic logo" />
+          </div>
+          <div class="card_bottom">
+            <div class="card_category">
+              Member Support Associate
+            </div>
+            <div class="card_info">
+              <p class="title">The first peer-to-peer feedback platform for creatives.</p>
+              <p>
+                A ruby on rails app.
+              </p>
+            </div>
+
+          </div>
+        </div>
+      </a>
+    </div>
+     <div class="card_item" data-aos="fade-up-left">
+      <a href="bkfst.io">
+        <div class="card_inner">
+          <div class="card_top">
+            <img  class="card-img" src="./assets/image/boc.png" alt="car" />
+          </div>
+          <div class="card_bottom">
+            <div class="card_category">
+              BOC
+            </div>
+            <div class="card_info">
+              <p class="title">The first peer-to-peer feedback platform for creatives.</p>
+              <p>
+                A ruby on rails app.
+              </p>
+            </div>
+
+          </div>
+        </div>
+      </a>
+    </div>
+     <div class="card_item" data-aos="fade-up-left">
+      <a href="bkfst.io">
+        <div class="card_inner">
+          <div class="card_top">
+            <img  class="card-img" src="./assets/image/boc.png" alt="car" />
+          </div>
+          <div class="card_bottom">
+            <div class="card_category">
+              BOC
+            </div>
+            <div class="card_info">
+              <p class="title">The first peer-to-peer feedback platform for creatives.</p>
+              <p>
+                A ruby on rails app.
+              </p>
+            </div>
+
+          </div>
+        </div>
+      </a>
+    </div>
+     <div class="card_item" data-aos="fade-up-left">
       <a href="bkfst.io">
         <div class="card_inner">
           <div class="card_top">
