--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <hr class="divider" data-aos="zoom-in-right" />
 
         <div class="text-center" data-aos="fade">
-          <p class="description">I am innovative, very creative and love designing, building and managing projects from the ground up.
+          <p class="description">I am innovative, creative and love designing, building and managing projects from the ground up.
 Great working in a team environment having previously managed projects requiring multiple staff. I am also very capable on my own. I am results driven and have experience meeting deadlines, budgets and intensive detailed project/program requirements.</p>
         </div>
 
@@ -215,7 +215,7 @@ Great working in a team environment having previously managed projects requiring
   <!--  projects -->
 <section class="page-section" id="projects">
     <div class="container text-center">
-          <h2>My Work</h2>
+          <h2>My Web Dev Work</h2>
           <hr class="divider" data-aos="zoom-in-right" />
     </div>
 
@@ -268,27 +268,7 @@ Great working in a team environment having previously managed projects requiring
         </div>
       </a>
     </div>
-    <div class="card_item" data-aos="fade-up-left">
-      <a href="bkfst.io">
-        <div class="card_inner">
-          <div class="card_top">
-            <img  class="card-img" src="./assets/image/boc.png" alt="car" />
-          </div>
-          <div class="card_bottom">
-            <div class="card_category">
-              BOC
-            </div>
-            <div class="card_info">
-              <p class="title">The first peer-to-peer feedback platform for creatives.</p>
-              <p>
-                A ruby on rails app.
-              </p>
-            </div>
 
-          </div>
-        </div>
-      </a>
-    </div>
      <div class="container text-center experience">
           <h2>Previous Experience</h2>
           <hr class="divider" data-aos="zoom-in-right" />
@@ -305,9 +285,10 @@ Great working in a team environment having previously managed projects requiring
               Project Coordinator
             </div>
             <div class="card_info">
-              <p class="title">The first peer-to-peer feedback platform for creatives.</p>
+              <p class="title">Planned and coordinated multi-faceted learning and development programs impacting 2,500+ new and current employees.</p>
               <p>
-                A ruby on rails app.
+               May. 2019 – Mar. 2020 <br>
+                San Francisco, CA
               </p>
             </div>
 
@@ -326,9 +307,10 @@ Great working in a team environment having previously managed projects requiring
               Member Support Associate
             </div>
             <div class="card_info">
-              <p class="title">The first peer-to-peer feedback platform for creatives.</p>
+              <p class="title">Managed operations for 400+ members including: social media; onboarding; accounting; CRM data; newsletter; fundraisers; event planning; and other ad hoc projects.</p>
               <p>
-                A ruby on rails app.
+                Feb. 2018 – Sep. 2018 <br>
+                San Francisco, CA
               </p>
             </div>
 
@@ -340,16 +322,17 @@ Great working in a team environment having previously managed projects requiring
       <a href="bkfst.io">
         <div class="card_inner">
           <div class="card_top">
-            <img  class="card-img" src="./assets/image/boc.png" alt="car" />
+            <img  class="card-img" src="./assets/image/tides.png" alt="car" />
           </div>
           <div class="card_bottom">
             <div class="card_category">
-              BOC
+              Administrative Assistant
             </div>
             <div class="card_info">
-              <p class="title">The first peer-to-peer feedback platform for creatives.</p>
+              <p class="title">Administered grant stewardship for 250+ grants using Salesforce as primary tracking tool, in coordination with the Client Services, Legal, and Accounting departments.</p>
               <p>
-                A ruby on rails app.
+                Jul. 2016 –  Dec. 2016 <br>
+                San Francisco, CA
               </p>
             </div>
 
@@ -357,20 +340,21 @@ Great working in a team environment having previously managed projects requiring
         </div>
       </a>
     </div>
-     <div class="card_item" data-aos="fade-up-left">
+     <div class="card_item" data-aos="fade-up-right">
       <a href="bkfst.io">
         <div class="card_inner">
           <div class="card_top">
-            <img  class="card-img" src="./assets/image/boc.png" alt="car" />
+            <img  class="card-img" src="./assets/image/lq.png" alt="car" />
           </div>
           <div class="card_bottom">
             <div class="card_category">
-              BOC
+              Program Assistant
             </div>
             <div class="card_info">
-              <p class="title">The first peer-to-peer feedback platform for creatives.</p>
+              <p class="title">Managed logistics for a leadership development program involving 200 participants using Salesforce as the primary CRM.</p>
               <p>
-                A ruby on rails app.
+               Feb. 2016 – May. 2016 <br>
+                New York, NY
               </p>
             </div>
 
@@ -378,20 +362,21 @@ Great working in a team environment having previously managed projects requiring
         </div>
       </a>
     </div>
-     <div class="card_item" data-aos="fade-up-left">
+     <div class="card_item" data-aos="fade-up-right">
       <a href="bkfst.io">
         <div class="card_inner">
           <div class="card_top">
-            <img  class="card-img" src="./assets/image/boc.png" alt="car" />
+            <img  class="card-img" src="./assets/image/boa.jpg" alt="car" />
           </div>
           <div class="card_bottom">
             <div class="card_category">
-              BOC
+              Bank of America
             </div>
             <div class="card_info">
-              <p class="title">The first peer-to-peer feedback platform for creatives.</p>
+              <p class="title">Advised clients on financial services, opened & managed new accounts, resolved customer problems, & achieved quarterly sales goals.</p>
               <p>
-                A ruby on rails app.
+                Nov. 2012 – Aug. 2014 <br>
+                San Francisco, CA
               </p>
             </div>
 
@@ -413,23 +398,23 @@ Great working in a team environment having previously managed projects requiring
     <div class="container text-center">
         <div class="row justify-content-center">
           <div class="col-lg-8 text-center">
-            <h2 class="mt-0" data-aos="zoom-in">Let's Connect</h2>
+            <h2 class="mt-0" data-aos="zoom-in">Let's Work Together!</h2>
             <hr class="divider" data-aos="zoom-in-right" />
             <p class="text-muted mb-5">
-              Call or send
-              me an email!
+              Call, text or send
+              me an email.
             </p>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0" data-aos="fade-up-right">
             <i class="fas fa-phone fa-3x mb-3" style="color:#73a580"></i>
-            <div>0 </div>
+            <div>+31 6 38 87 03 35 </div>
           </div>
           <div class="col-lg-4 mr-auto text-center" data-aos="fade-up-left">
             <i class="fas fa-envelope fa-3x mb-3 " style="color:#73a580"></i>
             <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
-            <a href="mailto:samihalim@gmail.com" class="d-block email">
+            <a href="mailto:samihalim@gmail.com" class="d-block email" style="color:black;">
               samihalim@gmail.com</a>
           </div>
         </div>
