--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="description" content="">
+<meta name="description" content="Sami's Portfolio">
 <meta name="author" content="">
-<link rel="icon" href="favicon.ico">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 <title>Sami Halim's Web Portfolio</title>
 <link rel="stylesheet" href="css/style.css">
 
  <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="" />
+    <link rel="icon" type="image/x-icon" href="assets/image/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script
       src="https://use.fontawesome.com/releases/v5.15.1/js/all.js"
@@ -82,7 +81,7 @@
     <div class="avatar" data-aos="fade-up"></div>
          <h1 class="text-white font-weight-bold">
               Hi there! <br />
-              I am <span style="font-size: 4rem;">Sami Halim</span>.<br /> A full-stack web developer.
+              I am <span style="font-size: 4rem;">Sami Halim</span>.<br />Full-stack web developer.
             </h1>
     <a class="btn btn" style="background-color: #73a580" href="https://www.linkedin.com/in/samihalim/"> Linkedin</a>
   </div>
