--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ Great working in a team environment having previously managed projects requiring
     </div>
 
      <div class="card_item" data-aos="fade-up-left">
-      <a href="bkfst.io">
+      <a href="https://airbnb.com/">
         <div class="card_inner">
           <div class="card_top">
             <img  class="card-img" src="./assets/image/airbnb.png" alt="airbnb logo" />
@@ -296,7 +296,7 @@ Great working in a team environment having previously managed projects requiring
       </a>
     </div>
      <div class="card_item" data-aos="fade-up-left">
-      <a href="bkfst.io">
+      <a href="https://toniic.com/">
         <div class="card_inner">
           <div class="card_top">
             <img  class="card-img" src="./assets/image/toniic.png" alt="toniic logo" />
@@ -318,10 +318,10 @@ Great working in a team environment having previously managed projects requiring
       </a>
     </div>
      <div class="card_item" data-aos="fade-up-left">
-      <a href="bkfst.io">
+      <a href="https://www.tides.org/">
         <div class="card_inner">
           <div class="card_top">
-            <img  class="card-img" src="./assets/image/tides.png" alt="car" />
+            <img  class="card-img" src="./assets/image/tides.png" alt="tides foundation logo" />
           </div>
           <div class="card_bottom">
             <div class="card_category">
@@ -340,10 +340,10 @@ Great working in a team environment having previously managed projects requiring
       </a>
     </div>
      <div class="card_item" data-aos="fade-up-right">
-      <a href="bkfst.io">
+      <a href="https://leadersquest.org/">
         <div class="card_inner">
           <div class="card_top">
-            <img  class="card-img" src="./assets/image/lq.png" alt="car" />
+            <img  class="card-img" src="./assets/image/lq.png" alt="leaders quest logo" />
           </div>
           <div class="card_bottom">
             <div class="card_category">
@@ -362,10 +362,10 @@ Great working in a team environment having previously managed projects requiring
       </a>
     </div>
      <div class="card_item" data-aos="fade-up-right">
-      <a href="bkfst.io">
+      <a href="https://www.bankofamerica.com/">
         <div class="card_inner">
           <div class="card_top">
-            <img  class="card-img" src="./assets/image/boa.jpg" alt="car" />
+            <img  class="card-img" src="./assets/image/boa.jpg" alt="bank of america logo" />
           </div>
           <div class="card_bottom">
             <div class="card_category">
