--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@ Great working in a team environment having previously managed projects requiring
       <a href="https://www.bankofamerica.com/">
         <div class="card_inner">
           <div class="card_top">
-            <img  class="card-img" src="./assets/image/boa.jpg" alt="bank of america logo" />
+            <img  class="card-img" src="./assets/image/boa.png" alt="bank of america logo" />
           </div>
           <div class="card_bottom">
             <div class="card_category">
