--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ Great working in a team environment having previously managed projects requiring
               Airbrb
             </div>
             <div class="card_info">
-              <p class="title">An Airbnb clone application for desk rentals all around the world!</p>
+              <p class="title">An Airbnb clone web application for desk rentals all around the world!</p>
               <p>
                 A ruby on rails app.
               </p>
