--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <a class="nav-link js-scroll-trigger" id="change" href="#languages">Languages</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" id="change" href="#projects">My Work</a>
+              <a class="nav-link js-scroll-trigger" id="change" href="#projects">Work</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" id="change" href="#contact">Contact</a>
