--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="avatar" data-aos="fade-up"></div>
          <h1 class="text-white font-weight-bold">
               Hi there! <br />
-              I am <span style="font-size: 4rem;">Sami Halim</span>.<br />Full-stack web developer.
+              I am <span style="font-size: 4rem;">Sami Halim</span>.<br />Full Stack Web Developer.
             </h1>
     <a class="btn btn" style="background-color: #73a580" href="https://www.linkedin.com/in/samihalim/"> Linkedin</a>
   </div>
