--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@ Great working in a team environment having previously managed projects requiring
           </div>
           <div class="card_bottom">
             <div class="card_category">
-              Bank of America
+              Personal Banker
             </div>
             <div class="card_info">
               <p class="title">Advised clients on financial services, opened & managed new accounts, resolved customer problems, & achieved quarterly sales goals.</p>
