--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ Great working in a team environment having previously managed projects requiring
            </div>
            <div class="col-lg-4 text-center">
                  <div class="mt-5">
-                   <img src="./assets/image/sql.png"  alt="sql logo" class="icon" data-aos="fade-left"
+                   <img src="./assets/image/react.png"  alt="react logo" class="icon" data-aos="fade-left"
                    data-aos-easing="linear" />
                  </div>
            </div>
@@ -206,6 +206,12 @@ Great working in a team environment having previously managed projects requiring
              <div class="col-lg-4 text-center">
                  <div class="mt-5">
                    <img src="./assets/image/scss.png" alt="scss logo" class="icon" data-aos="fade-down"
+                   data-aos-easing="linear" />
+                 </div>
+           </div>
+            <div class="col-lg-4 text-center">
+                 <div class="mt-5">
+                   <img src="./assets/image/sql.png" alt="sql logo" class="icon" data-aos="fade-down"
                    data-aos-easing="linear" />
                  </div>
            </div>
