--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
           <hr class="divider" data-aos="zoom-in-right" />
 
         <div class="text-center" data-aos="fade">
-          <p class="description">Creative, innovative, love designing, building and managing projects from the ground up.
-Great working in a team environment having previously managed projects requiring multiple staff. I am also very capable on my own. I am results driven and have experience meeting deadlines, budgets and intensive detailed project/program requirements.</p>
+          <p class="description">Creative, innovative, love designing, building, and managing projects from the ground up. Great working in a team environment having previously managed projects requiring multiple staff. I am also very capable on my own. I am results-driven and have experience meeting deadlines, budgets, and intensive detailed project/program requirements.</p>
         </div>
 
     </div>
